# introRust

./: README.md
journalisation/: Cargo.toml
journalisation/src/: main.rs
tp0/: Cargo.toml
tp0/src/: main.rs
tp1/src/: main.rs
tp1Struct/: Cargo.toml
tp1Struct/src/: main.rs
tp2/src/: main.rs
tp7/: Cargo.toml
tp7/src/: main.rs
tp8/: Cargo.toml
tp8/src/: main.rs
tp9/: Cargo.toml
tp9/src/: client.rs  server.rs
